简单集成一个bmp的库， 目前就按回车键简单存一下图

--- a/RenderLite.vcxproj.filters
+++ b/RenderLite.vcxproj.filters
@@ -91,6 +91,9 @@
     <ClInclude Include="Math\transform3.h">
       <Filter>Math</Filter>
     </ClInclude>
+    <ClInclude Include="bmp.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="RenderLite.rc">
