添加了环绕相机，真不戳 但在一些情况下有万向节死锁问题 其他地方有一些杂七杂八的调整

--- a/RenderLite.vcxproj
+++ b/RenderLite.vcxproj
@@ -166,6 +166,7 @@
     <ClCompile Include="Model.cpp" />
     <ClCompile Include="Mouse.cpp" />
     <ClCompile Include="Object.cpp" />
+    <ClCompile Include="OrbitCamera.cpp" />
     <ClCompile Include="ShaderBase.cpp" />
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="Window.cpp" />
@@ -187,6 +188,7 @@
     <ClInclude Include="Model.h" />
     <ClInclude Include="Mouse.h" />
     <ClInclude Include="Object.h" />
+    <ClInclude Include="OrbitCamera.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="ShaderBase.h" />
     <ClInclude Include="Timer.h" />
