--- a/RenderLite.vcxproj.filters
+++ b/RenderLite.vcxproj.filters
@@ -50,6 +50,9 @@
     <ClCompile Include="ShaderBase.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="OrbitCamera.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Window.h">
@@ -110,6 +113,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="ShaderBase.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="OrbitCamera.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
