修改了pixelshader接收纹理参数 对于纹理增加了双线性插值 给Graphics增加了具体的可选项

--- a/RenderLite.vcxproj
+++ b/RenderLite.vcxproj
@@ -178,6 +178,7 @@
     <ClInclude Include="ChiliWin.h" />
     <ClInclude Include="Exception.h" />
     <ClInclude Include="Graphics.h" />
+    <ClInclude Include="GraphicsDiscriptor.h" />
     <ClInclude Include="Keyboard.h" />
     <ClInclude Include="Math\mat4.h" />
     <ClInclude Include="Math\Math.h" />
