以实现天空盒为主线，调整了纹理类结构，加入了齐次裁剪。小改动很多，msaa暂时取消

--- a/RenderLite.vcxproj
+++ b/RenderLite.vcxproj
@@ -163,12 +163,16 @@
     <ClCompile Include="Draw2d.cpp" />
     <ClCompile Include="Exception.cpp" />
     <ClCompile Include="Graphics.cpp" />
+    <ClCompile Include="Image.cpp" />
     <ClCompile Include="Keyboard.cpp" />
+    <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="Model.cpp" />
     <ClCompile Include="Mouse.cpp" />
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="OrbitCamera.cpp" />
     <ClCompile Include="ShaderBase.cpp" />
+    <ClCompile Include="SkyBox.cpp" />
+    <ClCompile Include="Texture2D.cpp" />
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="Window.cpp" />
     <ClCompile Include="WinMain.cpp" />
@@ -181,6 +185,7 @@
     <ClInclude Include="Exception.h" />
     <ClInclude Include="Graphics.h" />
     <ClInclude Include="GraphicsDiscriptor.h" />
+    <ClInclude Include="Image.h" />
     <ClInclude Include="Keyboard.h" />
     <ClInclude Include="Math\mat4.h" />
     <ClInclude Include="Math\Math.h" />
@@ -188,12 +193,17 @@
     <ClInclude Include="Math\vec2.h" />
     <ClInclude Include="Math\vec3.h" />
     <ClInclude Include="Math\vec4.h" />
+    <ClInclude Include="Mesh.h" />
     <ClInclude Include="Model.h" />
     <ClInclude Include="Mouse.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="OrbitCamera.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="ShaderBase.h" />
+    <ClInclude Include="SkyBox.h" />
+    <ClInclude Include="stb_image.h" />
+    <ClInclude Include="Texture2D.h" />
+    <ClInclude Include="Texture2DDescriptor.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="Math\transform3.h" />
     <ClInclude Include="Window.h" />
